--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="author" content="Tyler Stober">
     <meta name="apple-mobile-web-app-title" content="Tyler Stober">
-    <meta name="viewport" content="width=device-width, initial-scale=1, minimal-ui" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="HandheldFriendly" content="True">
     <meta name="MobileOptimized" content="320">
